--- a/sass/_queries.scss
+++ b/sass/_queries.scss
@@ -141,6 +141,25 @@
 	// 	padding: 40px 0;
 	// }
 
+
+	.car-menu-item {
+		h5,
+		.price {
+			text-align: left;
+			padding-left: 10px;
+		}
+	}
+
+
+	.yamm .dropdown.yamm-fw .dropdown-menu.new-car-menu-container {
+		height: auto;
+		overflow-y: none;
+		overflow: hidden;
+		width: 900px;
+		left: 0;
+		margin: 0 auto;
+	}
+
 	.page-heading {
 		font-size: 70px;
 		line-height: 65px;
@@ -268,6 +287,12 @@
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: $screen-lg-min) {
+
+	.yamm .dropdown.yamm-fw .dropdown-menu.new-car-menu-container {
+
+		width: auto;
+		margin: inherit;
+	}
 
 	.small-button-left {
 		@include btn-curved;
